--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 .container {
-  width: 120px;
-  height: auto;
-  box-shadow: 0 0 0 10px rgba(0,0,0,0.5);
+  text-align: center;
+  position: absolute;
+  background: #333;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  width: 250px;
+  left: 35%;
+  top: 15px;
+  transform: translateX(-50%)
 }
